# emar

./: STATUS.md  docker-compose.yml
careplanner/: daily_log_schema.sql  ingest_stanley_hudson_all.sql
client-admin/: alan.turing.json  albert.steptoe.json  dorothy.gale.json  emmeline.pankhurst.json  ethel.beavers.json  ethel.beavers_adm.json  george.best.json  hyacinth.bucket.json  margret.thatcher.json  reginald.dwight.json  rose.tyler.json  stanley.hudson.json  vera.lyn.json  winston.smith.json
client-errors/: conflicting_docs.md  false_documentation.md  refusals.md  right-time.md
client-log/: stanley-hudson.json
client/admin/: pankhurst.json  stanley.hudson.json
client/daily-log/: ethel-beavers.json
client/med/: stanley.hudson.json
client/medication/: medication_schema.sql  moderate_payload.json  (+1 more)
docs/: postgres-changes.md
errors/: conflicting_docs.md  refusals.md  right-time.md
medication/: large_paylod.json
mobile/: Dockerfile  README.md  nginx.conf  pubspec.yaml
rust_core/: Cargo.toml  Dockerfile.android  README.md
scripts/: build-rust-android-docker.ps1  build-rust-android.bat  copy-rust-to-mobile.bat  copy-rust-to-mobile.ps1  designate_resident_ids.py  ingest_admin_events.py  ingest_careplanner_daily_logs.py  ingest_medications.py  ingest_residents.py
server/: .env.example  Cargo.toml  Dockerfile  README.md
server/migrations/: 0001_init.sql  0002_live_schema_upgrade.sql
server/src/: auth.rs  config.rs  db.rs  main.rs  models.rs
server/src/handlers/: auth.rs  bootstrap.rs  demo.rs  mod.rs  sync.rs
staff/: staff.sql
(+53 files in other folders)
